1. Align a subtitle 2. Fix css for responsive elements

--- a/desktop.blocks/page/page.styl
+++ b/desktop.blocks/page/page.styl
@@ -1,7 +1,25 @@
 .page{
     margin: 0;
     font-family: Georgia, "Times New Roman", Times, serif;
-    font-size: 1.5rem;
-    line-height: 2.5rem;
     min-width: 300px;
+
+    @media screen and (min-width: 0px) and (max-width: 480px) {
+        font-size: 1.1rem;
+        line-height: 1.7rem;
+    }
+
+    @media screen and (min-width: 481px) and (max-width: 800px) {
+        font-size: 1.2rem;
+        line-height: 1.9rem;
+    }
+
+    @media screen and (min-width: 801px) and (max-width: 1024px) {
+        font-size: 1.2rem;
+        line-height: 1.9rem;
+    }
+
+    @media screen and (min-width: 1025px) {
+        font-size: 1.5rem;
+        line-height: 2rem;
+    }
 }
