--- a/desktop.blocks/section/__header/section__header.styl
+++ b/desktop.blocks/section/__header/section__header.styl
@@ -8,9 +8,12 @@
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    background-attachment: fixed;
+    background-attachment: initial;
     height: 80vh;
-    //margin-top: 10vh;
     margin-bottom: 8vh;
     color: #fff;
+
+    @media screen and (min-width: 1025px) {
+        background-attachment: fixed;
+    }
 }
