--- a/desktop.blocks/section/__quote/section__quote.styl
+++ b/desktop.blocks/section/__quote/section__quote.styl
@@ -1,10 +1,13 @@
 .section__quote {
     margin-left: 5%;
     margin-right: 5%;
+    margin-top: 5vh;
+    border-left: 5px solid #f9f0f0;
+    margin: 0 auto;
+    margin-top: 5vh;
+    max-width: 470px;
 
     @media screen and (min-width: 0px) and (max-width: 480px) {
-        margin-top: 8vh;
-
         width: 90%;
     }
 
@@ -13,8 +16,7 @@
     }
 
     @media screen and (min-width: 801px) and (max-width: 1024px) {
-        max-width: 470px;
-        margin: auto;
+
         float: none;
         clear: none;
         position: static;
@@ -22,10 +24,6 @@
 
     @media screen and (min-width: 1025px) {
         text-align: justify;
-        font-size: 1rem;
-        line-height: 1.3rem;
-        border-left: 5px solid #f9f0f0;
-        max-width: 470px;
         width: 35%;
         margin: 0 auto;
         float: right;
