--- a/desktop.blocks/section/__subtitle/section__subtitle.styl
+++ b/desktop.blocks/section/__subtitle/section__subtitle.styl
@@ -1,4 +1,23 @@
 .section__subtitle {
-    font-size: 1rem;
     letter-spacing: 0.5rem;
+
+    @media screen and (min-width: 0px) and (max-width: 480px) {
+        font-size: 0.7rem;
+        line-height: 1rem;
+    }
+
+    @media screen and (min-width: 481px) and (max-width: 800px) {
+        font-size: 0.8rem;
+        line-height: 1rem;
+    }
+
+    @media screen and (min-width: 801px) and (max-width: 1024px) {
+        font-size: 0.9rem;
+        line-height: 1rem;
+    }
+
+    @media screen and (min-width: 1025px) {
+        font-size: 1.5rem;
+        line-height: 1.5rem;
+    }
 }
