--- a/desktop.blocks/section/__title/section__title.styl
+++ b/desktop.blocks/section/__title/section__title.styl
@@ -1,5 +1,25 @@
 .section__title {
-    font-size: 7rem;
     letter-spacing: 0.5rem;
-    margin-bottom: 3rem;
+
+    @media screen and (min-width: 0px) and (max-width: 480px) {
+        font-size: 3rem;
+        line-height: 3rem;
+    }
+
+    @media screen and (min-width: 481px) and (max-width: 800px) {
+        font-size: 5rem;
+        line-height: 5rem;
+    }
+
+    @media screen and (min-width: 801px) and (max-width: 1024px) {
+        font-size: 6rem;
+        line-height: 6rem;
+    }
+
+    @media screen and (min-width: 1025px) {
+        font-size: 7rem;
+        line-height: 7rem;
+    }
 }
+
+
